prevent flicker on chrome

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -28,6 +28,10 @@
 .card.nav:focus {
     cursor: pointer;
     opacity: 1;
+
+    /* https://stackoverflow.com/questions/20816739/image-div-flicker-on-hover-in-google-chrome */
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateX(0);
 }
 
 .card.nav img {
